styled the navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="../../assets/QuotesL.jpg" alt="" width="200" height="50">
+      </a>
+      <a class="navbar-brand" href="#">
+          <p><em><strong>"Motivation,Inspiration, Success"</strong></em></p>
+      </a>
+    </div>
+  </nav>
