--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,5 +1,5 @@
 <ul *ngFor = 'let quote of quotes'>
-    <div *ngIf="quote.upvotes== highest; then highlight else empty"></div>
+    <div *ngIf="quote.upvotes== highest && quote.upvotes > 0; then highlight else empty"></div>
     <ng-template #highlight>
         <li appHighlight>
             {{ quote.quote }} <br> 
