--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <app-navbar></app-navbar>
 <h1 class="mt-2 text-center">My Quotes</h1>
-<div class="home m-3">
+<div class="home m-5">
   <div class="bg-info text-dark">
 <div class="row">
   <div class="col-md-4">
-    <h2>Home</h2>
+    <app-home></app-home>
   </div>
   <div class="col-md-4">
     <h2>Quotes</h2>
