--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     <app-quote></app-quote>
   </div>
   <div class="col-md-4">
-    <h2>Quotes Form</h2>
+    <app-form></app-form>
   </div>
 </div>
 </div>
