--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,29 +1,31 @@
 <div class="container-fluid">
-    <h2 class="text-center">Create a new Quote</h2>
-    <hr>
-    <form>
-        <div class="form-group">
-  
-            <label for="name">Author</label>
-            <input type="text" required class="form-control" id="name">
-  
-        </div>
-        <div class="form-group">
-  
-            <label for="name">Publisher</label>
-            <input type="text" required class="form-control" id="name">
-  
-        </div>
-        <div class="form-group">
-  
-            <label for="description">Quote</label>
-            <textarea class="form-control" id="description" rows="4" required></textarea>
-  
-        </div>
-        <div class="form-group">
-            <label for="complete">Completion</label>
-            <input type='date' id="complete" required>
-  
-        </div>
-    </form>
-  </div>
+  <h2 class="text-center">Create a new Quote</h2>
+  <hr>
+  <form (ngSubmit)="submitQuote()" #quoteForm="ngForm">
+    <div class="form-group">
+        <label for="author">Author</label>
+        <input type="text" class="form-control" id="author" [(ngModel)]="newQuote.author" name="author" #author="ngModel"required>
+        <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+        <p>Please fill in!</p>
+      </div>
+    </div>
+    <div class="form-group">
+        <label for="name">Publisher</label>
+        <input type="text" class="form-control" id="publisher" [(ngModel)]="newQuote.publisher" name="publisher" #publisher="ngModel" required >
+        <div [hidden]="publisher.valid || publisher.pristine" class="alert alert-danger">
+            <p>Please fill in!</p>
+    </div>
+    </div>
+    <div class="form-group">
+        <label for="quote">Quote</label>
+      <textarea class="form-control" id="quote"  rows="4" [(ngModel)]="newQuote.quote" name="quote" #quote="ngModel" required></textarea>
+      <div [hidden] = "quote.valid || quote.pristine" class="alert alter-danger">
+          <p>Please fill in!</p>
+
+      </div>
+    </div>
+    <br>
+        <button type="submit" class="btn btn-success">Add Quote</button>
+
+  </form>
+</div>
