--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,11 @@
 img {
-    height: 450px;
-    width: 400px;
+    height: 600px;
+    width: 700px;
+}
+.random {
+    margin-top: 150px;
+    margin-right: 30px ;
+}
+.winfrey{
+    margin-right: 30px;
 }
