--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,15 @@
 <app-navbar></app-navbar>
 <h1 class="mt-2 text-center">My Quotes</h1>
+<p class="text-end fw-bolder motto">"Motivation,Inspiration, Success"</p>
+<div class="bg-info page">
 <div class="home m-5">
-  <div class="bg-info text-dark">
+  <div class="text-dark">
+    <div class="row">
     <app-home></app-home>
+  </div>
+  <div class="row">
     <app-quote></app-quote>
   </div>
- 
+</div>
+</div>
 </div>
