--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,3 +1,4 @@
+<div class="quotey">
 <div class="row">
     <div class="col-6">
 <app-form (addQuote)="generateQuote($event)"></app-form>
@@ -26,5 +27,6 @@
         </li>
     </ng-template>
 </ul>
+</div>
 </div>
 </div>
