--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,14 @@
-img {
-    height: 600px;
-    width: 700px;
-}
-.random {
-    margin-top: 150px;
-    margin-right: 30px ;
-}
+
 .winfrey{
     margin-right: 30px;
+}
+.opp {
+    background-image: url("./oprah-winfrey8.jpg");
+    background-repeat: no-repeat;
+    height:500px;
+    width:1000px;
+    margin-top: 10px;
+}
+.thankful {
+    margin-top: 100px;
 }
