--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,8 @@
-<div class="row">
-<div class="col-8">
-<img src="../../assets/oprah-winfrey8.jpg" class="m-2" alt="oprah">
+<div class="row opp">
+    <div class="col-8">
 </div>
 <div class="col-4">
-    <div class="random">
-  <p class="text-center fw-bolder fst-italic">"Be thankful for what you have; you'll end up having more.If you concentrate on what you don't have, you will never,ever have enough"</p>
+    <p class="text-center fw-bolder fst-italic thankful">"Be thankful for what you have; you'll end up having more.If you concentrate on what you don't have, you will never,ever have enough"</p>
   <p class="text-end winfrey fw-bolder">Oprah Winfrey</p>
-</div>
-</div>
+  </div>
 </div>
